Apply platform improvements
